# fast_zero_sync

./: .coverage  .env  Dockerfile  compose.yaml  database.db  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  setting.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 6e7a4f73269b_create_users_table.py  7934b47be78e_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
